plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.4'
    id 'io.spring.dependency-management' version '1.1.7'
    id "org.sonarqube" version "6.3.1.5724"
}

group = 'com.momo'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // JWT 관련 라이브러리 (토큰 생성, 파싱, 서명 등 처리용)
    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'             // 내부 구현체
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'           // JSON 직렬화/역직렬화 지원 (jackson 기반)

    // 이메일 인증 및 전송
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // Validation - 이메일, 비밀번호 등 유효성 검사
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // OAuth2 Client
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // Spring Security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // DB -------------
    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // PostgreSQL JDBC Driver
    runtimeOnly 'org.postgresql:postgresql'
    // ----------------

    // aws s3
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

    // Spring Boot Starter Web
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // WebSocket
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    // STOMP 메시징 추상화 (SimpMessagingTemplate 등)
    implementation 'org.springframework:spring-messaging'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Spring Boot DevTools (개발 중 자동 재시작 등 기능 제공)
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // Testing Dependencies
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}

sonarqube {
    properties {
        property "sonar.projectKey", "momo-backend" // SonarQube에서 설정한 Project Key
        property "sonar.projectName", "momo backend" // SonarQube에 표시될 이름
        property "sonar.host.url", "http://localhost:9000"
        property "sonar.sources", "src/main"
        property "sonar.java.binaries", "build/classes/java/main"
        property "sonar.token", "sqp_30bc419e86bff5372971e9f6605f8b4cd0085ac4"
    }
}